<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dimensions_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DimensionsFragment"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/row_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRowHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/number_of_rows"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNumberRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRowUpArrow"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/up_arrow"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRowDownArrow"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/down_arrow"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/col_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvColHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/number_of_columns"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNumberCols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:digits="0123456789"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnColUpArrow"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/up_arrow"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnColDownArrow"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/down_arrow"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEnterDimensions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_button"
        android:fontFamily="serif-monospace"
        android:text="@string/enterA"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>