<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/tvInputValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/please_enter_matrix_values"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view_matrix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnEnterValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/enter_values"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button"
            android:fontFamily="serif-monospace"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>